spacing bug fixed

--- a/ABDULLAHIADEBAYO_lab01/style.css
+++ b/ABDULLAHIADEBAYO_lab01/style.css
@@ -74,3 +74,6 @@ footer{
     color: white; 
 
 }
+form{
+    margin-top: 20px;
+}
